# AIDriven-Development-with-Python-and-Agentic-AI

./: .gitignore  Git commands.txt  README.md
.claude/: settings.local.json
Class-2/: cookbook_claude.md  readme.md  speckit_notes.md
Class-2/.claude/: settings.local.json
Class-3/: CLAUDE.md  README.md
Class-3/.claude/: settings.local.json
Class-3/.claude/skills/study-notes-creator/: SKILL.md  examples.md
Class-3/Notes/: Lesson-1-Agent-Skills-Study-Notes.md
Class-3/lessons/: lesson-1.md
Class-4/: IMPLEMENTATION_COMPLETE.md  NOTES_GENERATE_FINAL_SUMMARY.md  README.md  SKILL_MAKER_SUMMARY.md
Class-4/.claude/: CLAUDE.md  settings.local.json
Class-4/flashcards/what-is-llm/: what-is-llm-advanced-flashcards-visual.md  what-is-llm-advanced-flashcards.md  what-is-llm-basic-flashcards-visual.md  what-is-llm-basic-flashcards.md  what-is-llm-flashcard-index.md  what-is-llm-intermediate-flashcards-visual.md  what-is-llm-intermediate-flashcards.md  what-is-llm-study-schedule.md
Class-4/notes/what-is-llm/: NOTES_GENERATED_SUMMARY.md  what-is-llm-bloom-hierarchy.md  what-is-llm-complete.md  what-is-llm-learning-objectives.md  what-is-llm-practice-questions.md
Class-4/quizes/: what-is-llm-quiz.md
Class-9/: FINAL-SUMMARY.md  SKILLS-AND-SUBAGENTS-SUMMARY.md  pyproject.toml  readme.md
Class-9/.claude/: settings.local.json
Class-9/.claude/skills/cli-calculator-setup/: HOW-TO-USE.md  SKILL-SUMMARY.md  SKILL.md  examples.md  reference.md
Class-9/.claude/subagents/: README.md  SUBAGENT-GUIDE.md  calculator-logic-design.md
Class-9/src/: __init__.py  calculator.py  cli.py  errors.py  gui.py
Class-9/tests/contract/: test_cli_contract.py
Class-9/tests/integration/: test_end_to_end.py
Class-9/tests/unit/: test_calculator.py  test_errors.py  test_gui.py
project A-1/: README.md
project A-1/.claude/: settings.local.json
(+26 files in other folders)
